unseen notification count API uodated
