# src/swagger.json
@@ -3609,12 +3609,21 @@
             "description": "Enter jwt token for authentication",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "description": "type",
+            "required": false,
+            "type": "string",
+            "enum":["achievement","chat","goal","rating"]
           }
+
         ],
         "responses": {}
       }
     },
-    "/employee/markNotificationAsViewed/{notification_id}": {
+    "/employee/markNotificationsAsViewed": {
       "put": {
         "tags": [
           "Employee"
@@ -3632,11 +3641,17 @@
             "type": "string"
           },
           {
-            "name": "notification_id",
-            "in": "path",
-            "description": "Enter notification id",
-            "required": true,
-            "type": "string"
+            "name": "type",
+            "in": "query",
+            "description": "type",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "achievement",
+              "chat",
+              "goal",
+              "rating"
+            ]
           }
         ],
         "responses": {}
